fix weird issue of board getting too big by removing its flex property

--- a/src/components/TicTacToe/TTT.css
+++ b/src/components/TicTacToe/TTT.css
@@ -22,18 +22,18 @@
 }
 
 #reset-button {
-  margin-left: 15px;
+  margin: 0 0 0 15px;
 }
 
 .board {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: space-around;
-  flex-basis: 70vw;
+  flex-basis: 70vw; */
 
   aspect-ratio: 1/1;
   margin-bottom: 5vh;
-  /* height: 70vw; */
+  height: 70vw;
   /* width: 70vw; */
   max-width: 600px;
   max-height: 600px;
@@ -47,17 +47,16 @@
   border: none;
   margin: 0;
   padding: 0;
-  font-size: 100%;
+  font-size: 4em;
 }
 
 .cell {
   width: 100%;
   height: 100%;
   display: inline;
-  font-size: 4em;
 }
 .row {
-  height: 100%;
+  height: 33.3333%;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -74,7 +73,7 @@
 }
 
 @media screen and (max-height: 600px) {
-  .cell {
+  .icon-button {
     font-size: 2.5em;
   }
 
@@ -84,13 +83,13 @@
 }
 
 @media screen and (max-width: 400px) {
-  .cell {
+  .icon-button {
     font-size: 3em;
   }
 }
 
 @media screen and (max-width: 300px) {
-  .cell {
+  .icon-button {
     font-size: 2em;
   }
 }
